refactor(core): :recycle: update workflow statistics model
